force-app/main/default/objects/Account/fields/Commit_Field__c.field-meta.xml
<CustomField>
    <fullName>Commit_Field__c</fullName>
    <label>Commit Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>