force-app/main/default/objects/Account/fields/Personal_Account_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Personal_Account_Phone_Number__c</fullName>
    <label>Personal Account Phone Number</label>
    <type>Phone</type>
</CustomField>