force-app/main/default/objects/Account/fields/Previous_Rating__c.field-meta.xml
<CustomField>
    <fullName>Previous_Rating__c</fullName>
    <label>Previous Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>cold</fullName>
            </value>
            <value>
                <fullName>warm</fullName>
            </value>
            <value>
                <fullName>hot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>