force-app/main/default/objects/Account/recordTypes/Account_RT.recordType-meta.xml
<RecordType>
    <fullName>Account_RT</fullName>
    <active>true</active>
    <label>Account RT</label>
</RecordType>