force-app/main/default/objects/Account/recordTypes/Account_RT_2.recordType-meta.xml
<RecordType>
    <fullName>Account_RT_2</fullName>
    <active>true</active>
    <label>Account RT 2</label>
</RecordType>