force-app/main/default/objects/Account/validationRules/account_if_industry_is_banking_then_hot.validationRule-meta.xml
<ValidationRule>
    <fullName>account_if_industry_is_banking_then_hot</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
  ISPICKVAL( Industry , &quot;banking&quot;),
  NOT(ISPICKVAL( Rating , &quot;hot&quot; )) 
)</errorConditionFormula>
    <errorMessage>Account must consist of banking &amp; hot</errorMessage>
</ValidationRule>