force-app/main/default/objects/Account/validationRules/Active_Status_Must_be_Yes.validationRule-meta.xml
<ValidationRule>
    <fullName>Active_Status_Must_be_Yes</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
  ISNEW(),
  NOT( ISPICKVAL( Active__c , &quot;Yes&quot;) ) 
)</errorConditionFormula>
    <errorMessage>Account Active status must be Yes</errorMessage>
</ValidationRule>