force-app/main/default/objects/Account/validationRules/Hot_Rating.validationRule-meta.xml
<ValidationRule>
    <fullName>Hot_Rating</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISPICKVAL( Rating , &apos;Hot&apos;),AnnualRevenue &lt;= 100000)</errorConditionFormula>
    <errorDisplayField>AnnualRevenue</errorDisplayField>
    <errorMessage>Annual Revenue should be above 1 Lakh for Hot Rating</errorMessage>
</ValidationRule>