force-app/main/default/objects/Account/validationRules/order_of_cold_warm_hot.validationRule-meta.xml
<ValidationRule>
    <fullName>order_of_cold_warm_hot</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    OR(
        ISPICKVAL(Previous_Rating__c, &quot;Cold&quot;),
        ISPICKVAL(Previous_Rating__c, &quot;Warm&quot;),
        ISPICKVAL(Previous_Rating__c, &quot;Hot&quot;)
    ),
  NOT(  OR(
        AND(ISPICKVAL(Previous_Rating__c, &quot;Cold&quot;), ISPICKVAL(Rating, &quot;Warm&quot;)),
        AND(ISPICKVAL(Previous_Rating__c, &quot;Warm&quot;), ISPICKVAL(Rating, &quot;Cold&quot;)),
        AND(ISPICKVAL(Previous_Rating__c, &quot;Warm&quot;), ISPICKVAL(Rating, &quot;Hot&quot;)),
        AND(ISPICKVAL(Previous_Rating__c, &quot;Hot&quot;), ISPICKVAL(Rating, &quot;Warm&quot;))
    ))
)</errorConditionFormula>
    <errorDisplayField>Rating</errorDisplayField>
    <errorMessage>order must be in cold warm hot</errorMessage>
</ValidationRule>