force-app/main/default/objects/Account/validationRules/Phone_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Rule</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK( Phone )</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Phone number is mandatory</errorMessage>
</ValidationRule>