force-app/main/default/objects/Account/validationRules/Warm_Rating.validationRule-meta.xml
<ValidationRule>
    <fullName>Warm_Rating</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISPICKVAL( Rating , &quot;Warm&quot;),AnnualRevenue  &lt;= 50000   ||  AnnualRevenue   &gt;=  100000)</errorConditionFormula>
    <errorDisplayField>AnnualRevenue</errorDisplayField>
    <errorMessage>Warm_Rating should be between 50000 to 1 Lakh</errorMessage>
</ValidationRule>